--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
