--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^2.1.8",
+    "vitest-mock-extended": "^2.0.2",
     "zod-prisma": "^0.5.4"
   }
 }
